logs/validate.20260323-162356.log
error[E0432]: unresolved import `crate::Chap18::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerTrait`
   --> src/Chap43/OrderedTableMtEph.rs:802:9
    |
802 |     use crate::Chap18::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerTrait;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `ArraySeqStPerTrait` in `Chap18::ArraySeqStPer::ArraySeqStPer`
    |
help: a similar name exists in the module
    |
802 |     use crate::Chap18::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerBaseTrait;
    |                                                                   ++++
help: consider importing this trait instead
    |
802 -     use crate::Chap18::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerTrait;
802 +     use crate::Chap19::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerTrait;
    |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
Elapsed: 10s
